feat: Refactor brand identity and typography
Updates the application's branding and visual language to align with the "Stone & Code" identity. This includes:

- Renaming the project in `package.json` and `metadata.json`.
- Adjusting the application title and meta description.
- Swapping font families to `Playfair Display` and `Space Mono`.
- Updating Tailwind CSS theme colors to a more minimalist palette.
- Refining system instructions for the Gemini AI concierge to reflect the new persona "The Architect" and the "MEGURID DESIGN LAB".
- Modifying error and fallback messages for AI responses to be more thematic.
- Removing scroll-based header styling and dynamic background effects from Hero section to simplify and adopt a more static, structured aesthetic.
- Updating UI elements and styling for a cleaner, more modern look.

--- a/index.html
+++ b/index.html
@@ -1,47 +1,35 @@
 <!DOCTYPE html>
-<html lang="ja" class="scroll-smooth">
+<html lang="ja" class="scroll-smooth antialiased">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MEGURID | Concrete & Design</title>
+    <title>MEGURID | DESIGN LAB</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@200;300;400;500;700&family=Cinzel:wght@400;500;600;800&family=Cormorant+Garamond:ital,wght@0,300;0,400;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,900;1,400&family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
-              sans: ['"Noto Sans JP"', 'sans-serif'],
-              serif: ['"Cinzel"', 'serif'],
-              elegant: ['"Cormorant Garamond"', 'serif'],
+              serif: ['"Playfair Display"', 'serif'],
+              mono: ['"Space Mono"', 'monospace'],
             },
             colors: {
-              concrete: {
-                50: '#f9f9f9',
-                100: '#f0f0f0',
-                200: '#e2e2e2',
-                300: '#cfcfcf',
-                400: '#b0b0b0',
-                500: '#909090',
-                600: '#707070',
-                700: '#505050',
-                800: '#303030',
-                900: '#1a1a1a',
-                950: '#0f0f0f',
-              }
+              paper: '#ffffff',
+              ink: '#000000',
+              subtle: '#f4f4f5',
+              border: '#e4e4e7',
+              accent: '#000000', // Black as accent
+              highlight: '#ff3300', // Vermilion for alerts
             },
             animation: {
-              'fade-up': 'fadeUp 1s ease-out forwards',
-              'fade-in': 'fadeIn 1.5s ease-out forwards',
+              'fade-up': 'fadeUp 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards',
+              'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
             },
             keyframes: {
               fadeUp: {
-                '0%': { opacity: '0', transform: 'translateY(20px)' },
-                '100%': { opacity: '1', transform: 'translateY(0)' },
-              },
-              fadeIn: {
-                '0%': { opacity: '0' },
-                '100%': { opacity: '1' },
+                '0%': { opacity: 0, transform: 'translateY(20px)' },
+                '100%': { opacity: 1, transform: 'translateY(0)' },
               }
             }
           }
@@ -50,27 +38,43 @@
     </script>
     <style>
       body {
-        background-color: #f9f9f9;
-        color: #1a1a1a;
+        background-color: #ffffff;
+        color: #000000;
+        overflow-x: hidden;
       }
-      /* Custom Scrollbar for Webkit */
+      
+      /* Paper Grain Texture */
+      .noise-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        pointer-events: none;
+        z-index: 9999;
+        opacity: 0.03;
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+      }
+
+      /* Custom Scrollbar - Minimal */
       ::-webkit-scrollbar {
-        width: 8px;
+        width: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: #f0f0f0; 
+        background: #ffffff; 
       }
       ::-webkit-scrollbar-thumb {
-        background: #b0b0b0; 
+        background: #000000; 
         border-radius: 0px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #707070; 
+        background: #333333; 
       }
-      
-      .text-vertical {
-        writing-mode: vertical-rl;
-        text-orientation: upright;
+
+      /* Selection */
+      ::selection {
+        background: #000000;
+        color: #ffffff;
       }
     </style>
   <script type="importmap">
@@ -86,6 +90,7 @@
 </script>
 </head>
   <body>
+    <div class="noise-overlay"></div>
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
