feat: Refactor project for improved Gemini integration
This commit addresses several areas to enhance the integration with Gemini AI services.

Key changes include:
- Renaming the project package to `megurid-design-lab` for clarity.
- Updating dependencies and adding development dependencies for Tailwind CSS and PostCSS.
- Modifying `index.html` to correctly load Tailwind CSS.
- Refactoring `geminiService.ts` to instantiate `GoogleGenAI` per request and remove the global `chatSession`.
- Introducing API key management in `ImageGenPage.tsx`, including a check for an API key and a prompt to select one if missing.
- Updating `vite.config.ts` to correctly load environment variables for API keys.
- Adjusting `tsconfig.json` for better compatibility with modern JavaScript features and module resolution.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MEGURID | DESIGN LAB</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,900;1,400&family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         theme: {
@@ -19,8 +19,8 @@
               ink: '#000000',
               subtle: '#f4f4f5',
               border: '#e4e4e7',
-              accent: '#000000', // Black as accent
-              highlight: '#ff3300', // Vermilion for alerts
+              accent: '#000000',
+              highlight: '#ff3300',
             },
             animation: {
               'fade-up': 'fadeUp 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards',
@@ -28,8 +28,8 @@
             },
             keyframes: {
               fadeUp: {
-                '0%': { opacity: 0, transform: 'translateY(20px)' },
-                '100%': { opacity: 1, transform: 'translateY(0)' },
+                '0%': { opacity: '0', transform: 'translateY(20px)' },
+                '100%': { opacity: '1', transform: 'translateY(0)' },
               }
             }
           }
@@ -37,61 +37,73 @@
       }
     </script>
     <style>
+      /* Custom Styles moved from index.css for immediate preview support */
       body {
-        background-color: #ffffff;
-        color: #000000;
-        overflow-x: hidden;
+          background-color: #ffffff;
+          color: #000000;
+          overflow-x: hidden;
       }
-      
+
       /* Paper Grain Texture */
       .noise-overlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        pointer-events: none;
-        z-index: 9999;
-        opacity: 0.03;
-        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100vw;
+          height: 100vh;
+          pointer-events: none;
+          z-index: 9999;
+          opacity: 0.03;
+          background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
       }
 
       /* Custom Scrollbar - Minimal */
       ::-webkit-scrollbar {
-        width: 6px;
+          width: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: #ffffff; 
+          background: #ffffff;
       }
       ::-webkit-scrollbar-thumb {
-        background: #000000; 
-        border-radius: 0px;
+          background: #000000;
+          border-radius: 0px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #333333; 
+          background: #333333;
       }
 
       /* Selection */
       ::selection {
-        background: #000000;
-        color: #ffffff;
+          background: #000000;
+          color: #ffffff;
+      }
+
+      /* Utilities */
+      .writing-vertical {
+        writing-mode: vertical-rl;
+        text-orientation: mixed;
       }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.0/client",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
+    "react/jsx-runtime": "https://aistudiocdn.com/react@^19.2.0/jsx-runtime",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "vite": "https://aistudiocdn.com/vite@^7.2.6",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
-</head>
+  </head>
   <body>
     <div class="noise-overlay"></div>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
